changed font and fixed spacing

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -1,10 +1,12 @@
 h1 {
-  color: tomato;
+  color: #4C4C4C;
+  font-family: 'Oswald', sans-serif;
+  font-size: 11px;
+  padding-left: 6px;
 }
 
 @import url("https://fonts.googleapis.com/css?family=Lobster" );
-
-
+@import url('https://fonts.googleapis.com/css?family=Oswald');
 
 body {
   background: #FAD6D6;
